Fix header unaligned issue

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -20,6 +20,7 @@
     padding: 1em 1em 1em;
     font-family: $sans-serif-narrow;
     background-color: #fff;
+    height: calc(var(masthead-height) - 1px);
 
     @include breakpoint($x-large) {
       max-width: $x-large;
